[package]
name = "ev3-runner"
version = "0.1.0"
edition = "2024"
default-run = "ev3-runner"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ssh2 = "0.9.5"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
twox-hash = "2.1.2"
