[package]
name = "ev3-runner"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "A command-line tool to upload and run binaries on LEGO EV3 robots running ev3dev over TCP."
repository = "https://github.com/kingananas20/ev3-runner"
readme = "README.md"
keywords = ["cli", "ev3dev", "ssh", "tcp"]
categories = ["command-line-utilities"]

include = [
    "src/**",
    "README.md",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
]

default-run = "ev3-runner"

[[bin]]
name = "ev3-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
clap = { version = "4.5.51", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
twox-hash = "2.1.2"
